--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=production
-#APP_KEY=base64:FpFNp9eHLJ86pMqnISIF2O1r61XbMxcEst6IqfjDxi4=
-APP_KEY=RandomString
+APP_KEY=base64:FpFNp9eHLJ86pMqnISIF2O1r61XbMxcEst6IqfjDxi4=
+
 APP_DEBUG=true
 APP_URL=http://localhost
 
