--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="ReysonVial App"
 APP_ENV=local
 APP_KEY=base64:kUHrmFkY/h26tcLLgxT5HPpNj8PSB9iIXyj6SOnpP1E=
 APP_DEBUG=true
