--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/laravel",
+    "name": "ReysonVial App",
     "type": "project",
     "description": "The Laravel Framework.",
     "keywords": [
@@ -9,12 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "andrey-helldar/laravel-app": "^1.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
-        "andrey-helldar/laravel-app": "^1.0",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.9.1",
         "laravel/ui": "^1.0",
