--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=u3r5w4ayhxzdrw87.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=okr760hh7jbl7l7x
+DB_USERNAME=guzmcfj13shunond
+DB_PASSWORD=rca4qcj3yrfifbmc
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
